@@ -32,10 +32,10 @@ public class CapacitanceCharacteristic {
         isLogYScale = logscaleY;
         assert nonliny.length == nonlinx.length;
         for (int i = 0; i < nonliny.length; i++) {
-            y_val_C.add(new Double(nonliny[i]));
+            y_val_C.add(Double.valueOf(nonliny[i]));
         }
         for (int i = 0; i < nonlinx.length; i++) {
-            x_val_V.add(new Double(nonlinx[i]));
+            x_val_V.add(Double.valueOf(nonlinx[i]));
         }
 
         //System.out.println(x_val_V.toString());
@@ -79,20 +79,20 @@ public class CapacitanceCharacteristic {
     public void insertVC_point(double V, double C) {
         if (V > x_val_V.get(x_val_V.size() - 1).doubleValue()) {
             //add at end of list if V value is larger than last V value (since list is sorted ascending)
-            x_val_V.add(new Double(V));
-            y_val_C.add(new Double(C));
+            x_val_V.add(Double.valueOf(V));
+            y_val_C.add(Double.valueOf(C));
         } else if (characteristicContainsVpoint(V) >= 0) {
             //already exists point with this x-value, replace it with new point
             int valuetoreplace_index = characteristicContainsVpoint(V);
-            x_val_V.set(valuetoreplace_index, new Double(V));
-            y_val_C.set(valuetoreplace_index, new Double(C));
+            x_val_V.set(valuetoreplace_index, Double.valueOf(V));
+            y_val_C.set(valuetoreplace_index, Double.valueOf(C));
         } else {
             //new point that comes somewhere in the middle of the existing list; find place, insert
             for (Double point : x_val_V) {
                 if (point.doubleValue() > V) {
                     int insert_index = x_val_V.indexOf(point);
-                    x_val_V.add(insert_index, new Double(V));
-                    y_val_C.add(insert_index, new Double(C));
+                    x_val_V.add(insert_index, Double.valueOf(V));
+                    y_val_C.add(insert_index, Double.valueOf(C));
                     break;
                 }
             }
